RESOLVED FIXED143689
[EFL][GTK] Fix build break after r182753
https://bugs.webkit.org/show_bug.cgi?id=143689
Summary [EFL][GTK] Fix build break after r182753
Hunseop Jeong
Reported 2015-04-13 18:23:17 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2%20%28Perf%29/builds/5326/steps/compile-webkit/logs/stdio ../../Source/WebKit2/Platform/SharedMemory.h:81:33: error: candidates are: static WTF::RefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(void*, size_t, WebKit::SharedMemory::Protection) ../../Source/WebKit2/Platform/SharedMemory.h:80:33: error: static WTF::RefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(const WebKit::SharedMemory::Handle&, WebKit::SharedMemory::Protection) ../../Source/WebKit2/Platform/SharedMemory.h:79:33: error: static WTF::RefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(size_t) ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp: In function 'int WebKit::accessModeMMap(WebKit::SharedMemory::Protection)': ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:150:10: error: 'ReadOnly' is not a member of 'WebKit::SharedMemory' ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:152:10: error: 'ReadWrite' is not a member of 'WebKit::SharedMemory' ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:149:12: error: enumeration value 'ReadOnly' not handled in switch [-Werror=switch] ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:149:12: error: enumeration value 'ReadWrite' not handled in switch [-Werror=switch] ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp: At global scope: ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:160:26: error: prototype for 'WTF::PassRefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(const WebKit::SharedMemory::Handle&, WebKit::SharedMemory::Protection)' does not match any in class 'WebKit::SharedMemory' In file included from ../../Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:30:0: ../../Source/WebKit2/Platform/SharedMemory.h:81:33: error: candidates are: static WTF::RefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(void*, size_t, WebKit::SharedMemory::Protection) ../../Source/WebKit2/Platform/SharedMemory.h:80:33: error: static WTF::RefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(const WebKit::SharedMemory::Handle&, WebKit::SharedMemory::Protection) ../../Source/WebKit2/Platform/SharedMemory.h:79:33: error: static WTF::RefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(size_t) cc1plus: all warnings being treated as errors ICECC[8638] 23:37:19: Compiled on 10.6.11.34 ../../Source/WebKit2/Platform/IPC/unix/ConnectionUnix.cpp: In member function 'bool IPC::Connection::processMessage()': ../../Source/WebKit2/Platform/IPC/unix/ConnectionUnix.cpp:252:63: error: 'ReadOnly' is not a member of 'WebKit::SharedMemory' ../../Source/WebKit2/Platform/IPC/unix/ConnectionUnix.cpp: In member function 'bool IPC::Connection::sendOutgoingMessage(std::unique_ptr<IPC::MessageEncoder>)': ../../Source/WebKit2/Platform/IPC/unix/ConnectionUnix.cpp:441:51: error: 'ReadOnly' is not a member of 'WebKit::SharedMemory'
Attachments
Patch (4.03 KB, patch)
2015-04-13 18:33 PDT, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2015-04-13 18:33:28 PDT
WebKit Commit Bot
Comment 2 2015-04-13 19:45:53 PDT
Comment on attachment 250687 [details] Patch Clearing flags on attachment: 250687 Committed r182776: <http://trac.webkit.org/changeset/182776>
WebKit Commit Bot
Comment 3 2015-04-13 19:45:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.