[EFL][GTK] Fix build break after r182753 https://bugs.webkit.org/show_bug.cgi?id=143689

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-04-13
Reviewed by Anders Carlsson.

* Platform/IPC/unix/ConnectionUnix.cpp:
(IPC::Connection::processMessage):
(IPC::Connection::sendOutgoingMessage):
* Platform/unix/SharedMemoryUnix.cpp:
(WebKit::SharedMemory::allocate):
(WebKit::accessModeMMap):
(WebKit::SharedMemory::map):
(WebKit::SharedMemory::create): Deleted.

Canonical link: https://commits.webkit.org/161730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182776 268f45cc-cd09-0410-ab3c-d52691b4dbfc